--- a/first-amp.html
+++ b/first-amp.html
@@ -21,5 +21,6 @@
   </head>
   <body>
     <h1>Welcome to my AMP web</h1>
+    <amp-img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwiLo5DN7ujWAhXKn5QKHSX9AYMQjRwIBw&url=https%3A%2F%2Fwww.askideas.com%2F19-wonderful-welcome-images%2F&psig=AOvVaw0j-jXslOFMLj4hpcnFuJ5-&ust=1507821393872087" alt="Welcome" height="400" width="800"></amp-img>
   </body>
 </html>
