--- a/first-amp.html
+++ b/first-amp.html
@@ -20,7 +20,7 @@
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
     <style amp-custom>
       body {
-        background-color: white;
+        background-color: blue;
       }
       amp-img {
         background-color: grey;
@@ -29,7 +29,7 @@
     </style>
   </head>
   <body>
-    <h1>Welcome to my AMP web</h1>
+    <h1>Welcome to my AMP web #1</h1>
     <amp-img src="https://www.askideas.com/media/13/Welcome-Sticky-Note.png" alt="Welcome" height="400" width="800"></amp-img>
   </body>
 </html>
